@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-08-31
+2015-8-10 David Schneider
+- put all output during unit testing in subdirectory based in SIT_ARCH
+
 Tag: V00-08-30
 2015-7-7 David Schneider
 - add function to get calib data dir for testing
